--- a/booking.html
+++ b/booking.html
@@ -169,25 +169,31 @@
       let isEditing = false;
       const q = (s) => document.querySelector(s);
 
+      // ✅ Load cached bookings first
+      const savedData = localStorage.getItem("bookings_cache");
+      if (savedData) {
+        allData = JSON.parse(savedData);
+        console.log("📦 Loaded cached bookings:", allData.length);
+      }
+
       async function fetchData() {
         try {
           const res = await fetch("/api/bookings");
           const data = await res.json();
 
-          // ✅ Only keep NEW rows (not already in allData)
+          // ✅ Only add new rows (not already in cache)
           const newRows = data.filter(
             (b) => !allData.some((x) => x.id === b.id)
           );
 
           if (newRows.length > 0) {
             console.log(`🔄 Added ${newRows.length} new booking(s)`);
+            allData = [...allData, ...newRows].map((b) => ({
+              ...b,
+              status: b.status || "Still",
+            }));
+            localStorage.setItem("bookings_cache", JSON.stringify(allData));
           }
-
-          // merge new ones
-          allData = [...allData, ...newRows].map((b) => ({
-            ...b,
-            status: b.status || "Still",
-          }));
 
           return newRows;
         } catch (e) {
@@ -203,6 +209,12 @@
             .update({ status: newStatus })
             .eq("id", id);
           if (error) console.error("Error updating status:", error);
+
+          // ✅ Update locally and save
+          allData = allData.map((b) =>
+            b.id === id ? { ...b, status: newStatus } : b
+          );
+          localStorage.setItem("bookings_cache", JSON.stringify(allData));
         } catch (e) {
           console.error("Network error updating status:", e);
         }
@@ -223,9 +235,7 @@
             <td>
               <div style="display:flex;align-items:center;gap:5px;">
                 <span class="save-indicator" id="saved-${idx}">✔</span>
-                <select class="status-dropdown" data-index="${idx}" data-id="${
-            b.id
-          }">
+                <select class="status-dropdown" data-id="${b.id}">
                   <option value="Contacted" ${
                     b.status === "Contacted" ? "selected" : ""
                   }>تم التواصل</option>
@@ -250,17 +260,15 @@
           sel.addEventListener("focus", () => (isEditing = true));
           sel.addEventListener("blur", () => (isEditing = false));
           sel.addEventListener("change", async (e) => {
-            const index = e.target.dataset.index;
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
-            allData[index].status = newStatus;
             await updateStatus(id, newStatus);
 
-            const indicator = document.getElementById(`saved-${index}`);
+            const indicator = e.target.previousElementSibling;
             indicator.style.display = "inline";
             setTimeout(() => (indicator.style.display = "none"), 1500);
 
-            applyFilter(); // keep view consistent
+            applyFilter();
           });
         });
       }
@@ -290,7 +298,7 @@
 
       q("#statusFilter").addEventListener("change", applyFilter);
 
-      // Theme toggle
+      // 🌙 Theme toggle
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", function () {
         document.body.classList.toggle("dark");
@@ -322,12 +330,15 @@
 
       async function init(firstLoad = false) {
         if (isEditing) return;
-
         const prevFilter =
           localStorage.getItem("selectedStatusFilter") || "all";
 
+        // Render from cache first
+        q("#statusFilter").value = prevFilter;
+        applyFilter();
+
+        // Then fetch new rows
         const newRows = await fetchData();
-        // only re-render if new rows were added OR on first load
         if (newRows.length > 0 || firstLoad) {
           q("#statusFilter").value = prevFilter;
           applyFilter();
