--- a/booking.html
+++ b/booking.html
@@ -166,34 +166,27 @@
 
       let allData = [];
       let sortDirection = 1;
+      let sortColumn = null;
       let isEditing = false;
       const q = (s) => document.querySelector(s);
-
-      // ✅ Load cached bookings first
-      const savedData = localStorage.getItem("bookings_cache");
-      if (savedData) {
-        allData = JSON.parse(savedData);
-        console.log("📦 Loaded cached bookings:", allData.length);
-      }
 
       async function fetchData() {
         try {
           const res = await fetch("/api/bookings");
           const data = await res.json();
 
-          // ✅ Only add new rows (not already in cache)
           const newRows = data.filter(
             (b) => !allData.some((x) => x.id === b.id)
           );
 
           if (newRows.length > 0) {
             console.log(`🔄 Added ${newRows.length} new booking(s)`);
-            allData = [...allData, ...newRows].map((b) => ({
-              ...b,
-              status: b.status || "Still",
-            }));
-            localStorage.setItem("bookings_cache", JSON.stringify(allData));
           }
+
+          allData = [...allData, ...newRows].map((b) => ({
+            ...b,
+            status: b.status || "Still",
+          }));
 
           return newRows;
         } catch (e) {
@@ -209,12 +202,6 @@
             .update({ status: newStatus })
             .eq("id", id);
           if (error) console.error("Error updating status:", error);
-
-          // ✅ Update locally and save
-          allData = allData.map((b) =>
-            b.id === id ? { ...b, status: newStatus } : b
-          );
-          localStorage.setItem("bookings_cache", JSON.stringify(allData));
         } catch (e) {
           console.error("Network error updating status:", e);
         }
@@ -235,7 +222,9 @@
             <td>
               <div style="display:flex;align-items:center;gap:5px;">
                 <span class="save-indicator" id="saved-${idx}">✔</span>
-                <select class="status-dropdown" data-id="${b.id}">
+                <select class="status-dropdown" data-index="${idx}" data-id="${
+            b.id
+          }">
                   <option value="Contacted" ${
                     b.status === "Contacted" ? "selected" : ""
                   }>تم التواصل</option>
@@ -260,11 +249,13 @@
           sel.addEventListener("focus", () => (isEditing = true));
           sel.addEventListener("blur", () => (isEditing = false));
           sel.addEventListener("change", async (e) => {
+            const index = e.target.dataset.index;
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
+            allData[index].status = newStatus;
             await updateStatus(id, newStatus);
 
-            const indicator = e.target.previousElementSibling;
+            const indicator = document.getElementById(`saved-${index}`);
             indicator.style.display = "inline";
             setTimeout(() => (indicator.style.display = "none"), 1500);
 
@@ -276,12 +267,23 @@
       function sortTable(col) {
         const tb = q("#tbl tbody");
         const rows = Array.from(tb.rows);
+
+        if (sortColumn === col) {
+          sortDirection *= -1;
+        } else {
+          sortColumn = col;
+          sortDirection = 1;
+        }
+
+        localStorage.setItem("sortColumn", col);
+        localStorage.setItem("sortDirection", sortDirection);
+
         rows.sort(
           (a, b) =>
             sortDirection *
             a.cells[col].textContent.localeCompare(b.cells[col].textContent)
         );
-        sortDirection *= -1;
+
         tb.innerHTML = "";
         rows.forEach((r) => tb.appendChild(r));
       }
@@ -294,11 +296,20 @@
             ? allData
             : allData.filter((b) => b.status === filterVal);
         renderTable(filtered);
+
+        // Apply saved sort if exists
+        const savedCol = localStorage.getItem("sortColumn");
+        const savedDir = parseInt(localStorage.getItem("sortDirection"));
+        if (savedCol !== null) {
+          sortColumn = parseInt(savedCol);
+          sortDirection = savedDir;
+          sortTable(sortColumn);
+        }
       }
 
       q("#statusFilter").addEventListener("change", applyFilter);
 
-      // 🌙 Theme toggle
+      // Theme toggle
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", function () {
         document.body.classList.toggle("dark");
@@ -330,20 +341,22 @@
 
       async function init(firstLoad = false) {
         if (isEditing) return;
+
         const prevFilter =
           localStorage.getItem("selectedStatusFilter") || "all";
 
-        // Render from cache first
-        q("#statusFilter").value = prevFilter;
-        applyFilter();
-
-        // Then fetch new rows
         const newRows = await fetchData();
         if (newRows.length > 0 || firstLoad) {
           q("#statusFilter").value = prevFilter;
           applyFilter();
         }
       }
+
+      // Restore sorting and filter on load
+      window.addEventListener("DOMContentLoaded", () => {
+        const prevFilter = localStorage.getItem("selectedStatusFilter");
+        if (prevFilter) q("#statusFilter").value = prevFilter;
+      });
 
       init(true);
       setInterval(() => init(false), 15000);
