--- a/booking.html
+++ b/booking.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clinic Dashboard - Booking Table</title>
 
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="./img/dummy-conan.jpeg" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -22,21 +24,25 @@
           display: flex;
           justify-content: center;
         }
+
         .table-card {
           width: 100% !important;
           max-width: none !important;
           margin: 0;
         }
+
         .main-content {
           width: 100%;
         }
       }
+
       .status-filter {
         margin: 15px 0;
         display: flex;
         align-items: center;
         gap: 10px;
       }
+
       select.status-dropdown,
       select#statusFilter {
         padding: 6px 8px;
@@ -45,14 +51,17 @@
         background: #fff;
         cursor: pointer;
       }
+
       body.dark select {
         background: #333;
         color: #fff;
         border-color: #555;
       }
+
       .table-card h3 {
         margin-bottom: 10px;
       }
+
       .save-indicator {
         font-size: 12px;
         color: green;
@@ -74,10 +83,12 @@
             <i class="fa-solid fa-gauge"></i>
             لوحة القيادة
           </a>
+
           <a href="notifications.html">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
           </a>
+
           <a href="analytics.html">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
@@ -86,10 +97,12 @@
             <i class="fa-solid fa-table"></i>
             جدول الحجوزات
           </a>
+
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
             إعدادات الذكاء الاصطناعي
           </a>
+
           <a href="offers.html">
             <i class="fa-solid fa-gift"></i>
             إرسال العروض المخصصة
@@ -113,6 +126,7 @@
           </div>
         </header>
 
+        <!-- BOOKING TABLE -->
         <section class="dashboard-grid">
           <div class="table-card" style="width: 100%">
             <h3>جدول الحجوزات</h3>
@@ -159,6 +173,7 @@
     </div>
 
     <script>
+      // ======= SUPABASE LOGIN LOGIC =======
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
@@ -166,33 +181,19 @@
 
       let allData = [];
       let sortDirection = 1;
-      let sortColumn = null;
-      let isEditing = false;
       const q = (s) => document.querySelector(s);
 
-      async function fetchData() {
-        try {
-          const res = await fetch("/api/bookings");
-          const data = await res.json();
+      async function load() {
+        const res = await fetch("/api/bookings");
+        allData = await res.json();
 
-          const newRows = data.filter(
-            (b) => !allData.some((x) => x.id === b.id)
-          );
+        // Add default status if missing
+        allData = allData.map((b) => ({
+          ...b,
+          status: b.status || "Still",
+        }));
 
-          if (newRows.length > 0) {
-            console.log(`🔄 Added ${newRows.length} new booking(s)`);
-          }
-
-          allData = [...allData, ...newRows].map((b) => ({
-            ...b,
-            status: b.status || "Still",
-          }));
-
-          return newRows;
-        } catch (e) {
-          console.error("Error fetching data:", e);
-          return [];
-        }
+        renderTable(allData);
       }
 
       async function updateStatus(id, newStatus) {
@@ -201,7 +202,10 @@
             .from("bookings")
             .update({ status: newStatus })
             .eq("id", id);
-          if (error) console.error("Error updating status:", error);
+
+          if (error) {
+            console.error("Error updating status:", error);
+          }
         } catch (e) {
           console.error("Network error updating status:", e);
         }
@@ -241,20 +245,17 @@
           tb.appendChild(r);
         });
 
-        attachDropdownEvents();
-      }
-
-      function attachDropdownEvents() {
+        // Attach change event
         document.querySelectorAll(".status-dropdown").forEach((sel) => {
-          sel.addEventListener("focus", () => (isEditing = true));
-          sel.addEventListener("blur", () => (isEditing = false));
           sel.addEventListener("change", async (e) => {
             const index = e.target.dataset.index;
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
+
             allData[index].status = newStatus;
             await updateStatus(id, newStatus);
 
+            // Show quick save check mark
             const indicator = document.getElementById(`saved-${index}`);
             indicator.style.display = "inline";
             setTimeout(() => (indicator.style.display = "none"), 1500);
@@ -267,43 +268,22 @@
       function sortTable(col) {
         const tb = q("#tbl tbody");
         const rows = Array.from(tb.rows);
-
-        if (sortColumn === col) {
-          sortDirection *= -1;
-        } else {
-          sortColumn = col;
-          sortDirection = 1;
-        }
-
-        localStorage.setItem("sortColumn", col);
-        localStorage.setItem("sortDirection", sortDirection);
-
         rows.sort(
           (a, b) =>
             sortDirection *
             a.cells[col].textContent.localeCompare(b.cells[col].textContent)
         );
-
+        sortDirection *= -1;
         tb.innerHTML = "";
         rows.forEach((r) => tb.appendChild(r));
       }
 
       function applyFilter() {
         const filterVal = q("#statusFilter").value;
-        localStorage.setItem("selectedStatusFilter", filterVal);
-        const filtered =
-          filterVal === "all"
-            ? allData
-            : allData.filter((b) => b.status === filterVal);
-        renderTable(filtered);
-
-        // Apply saved sort if exists
-        const savedCol = localStorage.getItem("sortColumn");
-        const savedDir = parseInt(localStorage.getItem("sortDirection"));
-        if (savedCol !== null) {
-          sortColumn = parseInt(savedCol);
-          sortDirection = savedDir;
-          sortTable(sortColumn);
+        if (filterVal === "all") {
+          renderTable(allData);
+        } else {
+          renderTable(allData.filter((b) => b.status === filterVal));
         }
       }
 
@@ -339,27 +319,9 @@
         sidebar.classList.toggle("active");
       });
 
-      async function init(firstLoad = false) {
-        if (isEditing) return;
-
-        const prevFilter =
-          localStorage.getItem("selectedStatusFilter") || "all";
-
-        const newRows = await fetchData();
-        if (newRows.length > 0 || firstLoad) {
-          q("#statusFilter").value = prevFilter;
-          applyFilter();
-        }
-      }
-
-      // Restore sorting and filter on load
-      window.addEventListener("DOMContentLoaded", () => {
-        const prevFilter = localStorage.getItem("selectedStatusFilter");
-        if (prevFilter) q("#statusFilter").value = prevFilter;
-      });
-
-      init(true);
-      setInterval(() => init(false), 15000);
+      // Load bookings on page load
+      load();
+      setInterval(load, 15000);
     </script>
   </body>
 </html>
