--- a/booking.html
+++ b/booking.html
@@ -94,7 +94,7 @@
 
           <a href="booking.html" class="active">
             <i class="fa-solid fa-table"></i>
-            جدول الحجوزات
+            جدول التواصل
           </a>
 
           <a href="AIsettings.html">
