--- a/notifications.html
+++ b/notifications.html
@@ -234,7 +234,7 @@
           </a>
           <a href="booking.html">
             <i class="fa-solid fa-table"></i>
-            جدول الحجوزات
+            جدول التواصل
           </a>
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
