--- a/offers.html
+++ b/offers.html
@@ -176,7 +176,7 @@
             ><i class="fa-solid fa-rocket"></i> تحليلات</a
           >
           <a href="booking.html"
-            ><i class="fa-solid fa-table"></i> جدول الحجوزات</a
+            ><i class="fa-solid fa-table"></i> جدول التواصل</a
           >
           <a href="AIsettings.html"
             ><i class="fa-solid fa-robot"></i> إعدادات الذكاء الاصطناعي</a
