--- a/analytics.html
+++ b/analytics.html
@@ -43,7 +43,7 @@
 
           <a href="booking.html">
             <i class="fa-solid fa-table"></i>
-            جدول الحجوزات
+            جدول التواصل
           </a>
 
           <a href="AIsettings.html">
